@@ -87,6 +87,7 @@ import org.junit.jupiter.engine.descriptor.TestFactoryTestDescriptor;
 import org.junit.jupiter.engine.descriptor.TestMethodTestDescriptor;
 import org.junit.jupiter.engine.descriptor.TestTemplateInvocationTestDescriptor;
 import org.junit.jupiter.engine.descriptor.TestTemplateTestDescriptor;
+import org.junit.jupiter.params.ParameterizedClass;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.junit.platform.engine.TestTag;
@@ -978,8 +979,10 @@ public class ClassTemplateInvocationTests extends AbstractJupiterTestEngineTests
 
 	@Test
 	void propagatesTagsFromEnclosingClassesToNestedClassTemplates() {
-		var engineDescriptor = discoverTestsForClass(
-			NestedClassTemplateWithTagOnEnclosingClassTestCase.class).getEngineDescriptor();
+		var request = defaultRequest() //
+				.selectors(selectClass(NestedClassTemplateWithTagOnEnclosingClassTestCase.class)) //
+				.build();
+		var engineDescriptor = discoverTestsWithoutIssues(request);
 		var classDescriptor = getOnlyElement(engineDescriptor.getChildren());
 		var nestedClassTemplateDescriptor = getOnlyElement(classDescriptor.getChildren());
 
@@ -987,6 +990,17 @@ public class ClassTemplateInvocationTests extends AbstractJupiterTestEngineTests
 				.containsExactly("top-level");
 		assertThat(nestedClassTemplateDescriptor.getTags()).extracting(TestTag::getName) //
 				.containsExactlyInAnyOrder("top-level", "nested");
+	}
+
+	@Test
+	void ignoresComposedAnnotations() {
+		var request = defaultRequest() //
+				.selectors(selectClass(ParameterizedClass.class)) //
+				.build();
+
+		var engineDescriptor = discoverTestsWithoutIssues(request);
+
+		assertThat(engineDescriptor.getDescendants()).isEmpty();
 	}
 
 	// -------------------------------------------------------------------
