@@ -35,7 +35,8 @@ repository on GitHub.
 [[release-notes-5.13.3-junit-jupiter-bug-fixes]]
 ==== Bug Fixes
 
-* ❓
+* Stop reporting discovery issues for composed annotation classes that are meta-annotated
+  with `@Nested`.
 
 [[release-notes-5.13.3-junit-jupiter-deprecations-and-breaking-changes]]
 ==== Deprecations and Breaking Changes
